Update the LDAP SDK to replace the use of LinkedList with ArrayList in a number of casese.  LinkedLists require an additional the allocation of an additional object per element in the list, whereas ArrayLists use one array for the entire list.  ArrayLists are also faster for some operations, like iterating and converting to an array.